# pyDisagg

./: .gitignore  .pre-commit-config.yaml  Dataframe Splitting Demo.ipynb  Dataframe Splitting Development.ipynb  Dataframe Splitting Development2.ipynb  README.md  README.rst  changelog.md  meson.build  paper.md  pyproject.toml  readme.md  setup.cfg  setup.py  slurm-21095523.out  test_dataset.py  test_pattern_uncertainty.ipynb
.github/workflows/: build.yml  lint.yml
docs/: .buildinfo  build.py  genindex.html  index.html  index.rst  installation.html  meta.toml  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/api_reference/: example.rst  index.html  index.rst
docs/getting_started/: index.rst  installation.rst  quickstart.rst
docs/pages/: index.html
docs/pages/0.5.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/pages/0.5.0/api_reference/: index.html
docs/pages/0.5.0/developer_guide/: index.html
docs/pages/0.5.0/getting_started/: index.html  installation.html  quickstart.html
docs/pages/0.5.0/user_guide/: cicd.html  documentation.html  index.html  project_organization.html  style_guide.html  testing.html
docs/pages/0.5.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
docs/pages/0.5.1/api_reference/: index.html
docs/pages/0.5.1/developer_guide/: index.html
docs/pages/0.5.1/getting_started/: index.html  installation.html  quickstart.html
docs/pages/0.5.1/user_guide/: cicd.html  config_guide.html  documentation.html  index.html  project_organization.html  style_guide.html  testing.html
docs/pages/0.6.0/: .buildinfo  genindex.html  searchindex.js
docs/pages/0.6.0/api_reference/: example.html  index.html
docs/user_guide/: config_guide.rst  index.rst
examples/: Basic Splitting Examples.ipynb  Dataframe Splitting Demo.ipynb  example.py  example_df_dataset.py  test_notebook.ipynb  test_notebook_old.ipynb  test_sex_split.ipynb
examples/ihme_api/: age_split_example.py  cat_big.py  cat_sex_split_example.py  cat_split.ipynb  cat_split_example.py  sex_split_example.py
sphinx/: Makefile  conf.py  installation.rst
sphinx/_static/css/: custom.css
src/pydisagg/: DisaggModel.py  ParameterTransformation.py  __init__.py  constants.py  disaggregate.py  models.py  preprocess.py  splittingmodel.py  transformations.py  typing.py
src/pydisagg/age_split/: __init__.py  age_split.py  age_var.py  helper.py
src/pydisagg/api/: prep.py
src/pydisagg/ihme/: __init__.py  age_split.py  age_splitter.py  helper.py  preprocess.py  schema.py  sex_split.py  sex_splitter.py  splitter.py  validator.py
src/splitting/: disaggregate.py  models.py  splittingmodel.py
src/template/: __about__.py
src/toreplace/: __about__.py
tests/: splitting_consistency_test.py  test_age_splitter.py  test_cat_splitter.py  test_disaggregate_api.py  test_dissaggregate_api.py  test_helper.py  test_sex_splitter.py  test_splitter.py  test_splitting_consistency.py  test_transformation_consistency.py  test_validator.py  transformation_consistency_test.py
(+11 files in other folders)
