[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydisagg"
version = "0.3.3"
authors = [{ name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" }]
description = ""
readme = "README.md"
license = { text = "BSD 2-Clause License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/ihmeuw-msca/pydisagg"

[tool.setuptools.packages]
find = {} 

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"