[metadata]
name = toreplace
version = 0.0.0
description =
long_description = file: README.rst
long_description_content_type = text/rst
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://github.com/ihmeuw-msca/toreplace


[options]
zip_safe = False
install_requires =
include_package_data = True
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    furo
dev =
    pytest