[metadata]
name = pydisagg
version = 0.2.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = IHME Math Sciences
author_email = ihme.math.sciences@gmail.com
license = BSD 2-Clause License
url = https://github.com/ihmeuw-msca/splitting-python-package


[options]
zip_safe = False
install_requires =
  matplotlib
  numpy
  pandas
  scipy
include_package_data = True
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    furo
dev =
    pytest
